--- a/build.gradle
+++ b/build.gradle
@@ -35,4 +35,9 @@ dependencies {
     //Log4J2
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
+
+    //Slf4j-Log4j2
+    //https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.8.2'
+
 }
