--- a/config/bot.config.json
+++ b/config/bot.config.json
@@ -1,6 +1,6 @@
 {
   "name": "Teeto",
-  "version": "1.0-Alpha",
-  "commands": ["teeto plz", "teeto please", "--"],
-  "helpCommand": "--help"
+  "version": "2.0-Alpha",
+  "commandPrefixes": ["teeto plz", "teeto please", ".."],
+  "helpCommand": "..help"
 }
