Moved response classes to messaging package. Command manager and help commands now fully use the response system.

--- a/config/responses.properties
+++ b/config/responses.properties
@@ -1,2 +1,7 @@
 help.author=Brought to you with love from Ki11er_wolf
 help.footer=Powered by The Salty Tears of your Toplane
+
+cmd.not_found=The command `{@command}` does not exist.
+cmd.error=Failed to execute command.
+cmd.arg_length_error=`{@command}` doesn't not take {@argLength} arguments.
+cmd.not_implemented=Command not yet implemented.
