--- a/config/responses.properties
+++ b/config/responses.properties
@@ -1,7 +1,11 @@
-help.author=Brought to you with love from Ki11er_wolf
+help.author=Brought to you with love by Ki11er_wolf
 help.footer=Powered by The Salty Tears of your Toplane
 
 cmd.not_found=The command `{@command}` does not exist.
 cmd.error=Failed to execute command.
 cmd.arg_length_error=`{@command}` doesn't not take {@argLength} arguments.
 cmd.not_implemented=Command not yet implemented.
+
+system.shutdown=Shutting down...
+system.reboot=Rebooting...
+system.cant_reboot=Could not reboot.
