--- a/config/responses.properties
+++ b/config/responses.properties
@@ -1,4 +1,4 @@
-help.author=Brought to you with love by Ki11er_wolf
+help.author=Coded with <3 by Ki11er_wolf
 help.footer=Powered by The Salty Tears of your Toplane
 
 cmd.not_found=The command `{@command}` does not exist.
@@ -9,3 +9,11 @@ cmd.not_implemented=Command not yet implemented.
 system.shutdown=Shutting down...
 system.reboot=Rebooting...
 system.cant_reboot=Could not reboot.
+
+audio.not_connected=Teeto is not in a voice channel.
+audio.left=Teeto has left {@channel}.
+audio.reset=Teeto Voice has been reset...
+audio.no_channel=This guild has no designated hell channel for Teeto to go to.
+audio.joined=Teeto has gone to {@channel}.
+audio.user_not_in_voice=Teeto cannot drag you to {@channel} if you are not in a voice channel.
+audio.enjoy=Enjoy :smiley:
