--- a/config/templates/help.template
+++ b/config/templates/help.template
@@ -12,7 +12,6 @@ Now, I live to serve you, Master.
 Any time you wish, you may summon me by putting any of the following at the beginning of your
 command: {@commandPrefixes}
 
-Bellow is the complete list of commands I understand:
+My complete list of commands will be sent shortly.
 
-{@commandList}
 Enjoy :grin:
