--- a/config/responses.properties
+++ b/config/responses.properties
@@ -5,6 +5,7 @@ cmd.not_found=The command `{@command}` does not exist.
 cmd.error=Failed to execute command.
 cmd.arg_length_error=`{@command}` doesn't not take {@argLength} arguments.
 cmd.not_implemented=Command not yet implemented.
+cmd.not_in_guild=This command can only be used in a guild.
 
 system.shutdown=Shutting down...
 system.reboot=Rebooting...
@@ -17,3 +18,8 @@ audio.no_channel=This guild has no designated hell channel for Teeto to go to.
 audio.joined=Teeto has gone to {@channel}.
 audio.user_not_in_voice=Teeto cannot drag you to {@channel} if you are not in a voice channel.
 audio.enjoy=Enjoy :smiley:
+audio.channel_not_found=The channel `{@channel}` does not exist.
+audio.song_not_found=That audio resource cannot be found.
+
+settings.saved=Settings saved.
+settings.not_saved=Failed to save settings.
