--- a/config/bot.config.json
+++ b/config/bot.config.json
@@ -1,6 +1,6 @@
 {
   "name": "Teeto",
   "version": "2.0-Alpha",
-  "commandPrefixes": ["teeto plz", "teeto please", "~"],
-  "helpCommand": "~help"
+  "commandPrefixes": ["teeto plz", "teeto please", "-"],
+  "helpCommand": "-help"
 }
