Small improvements to command config. Renamed BotMessageManager to BotMessageHandler. Bot message handler now uses the response system. Status change now logs on the debug level. Removed MessageUtil. Version number update with pre-release suffix.

--- a/config/commands.config.json
+++ b/config/commands.config.json
@@ -23,14 +23,14 @@
     },
     {
       "commandID": ".system.shutdown",
-      "names": ["-shutdown", "-drop-dead"],
+      "names": ["-shutdown"],
       "description": "Terminates the bot and bot application.",
       "extraInfo": null,
       "visible": false
     },
     {
       "commandID": ".system.reboot",
-      "names": ["-reboot", "-reboot-yourself"],
+      "names": ["-reboot"],
       "description": "Restarts the bot and bot application.",
       "extraInfo": null,
       "visible": false
@@ -58,7 +58,7 @@
     },
     {
       "commandID": ".audio.set",
-      "names": ["set-audio", "seta", "sa"],
+      "names": ["set-audio", "set-a", "s-a"],
       "description": "Sets the song to play in the guilds designated \"Hell\" channel.",
       "extraInfo": "This command MUST be used in a guild's text channel. Usage: \"set-hell <song-name>\", where <song-name> is the name of the song to play in the voice channel.",
       "visible": true
@@ -72,21 +72,21 @@
     },
     {
       "commandID": ".audio.set_channel",
-      "names": ["set-channel", "setc", "sc"],
-      "description": "Sets the song to play in the guilds designated \"Hell\" channel.",
+      "names": ["set-channel", "set-c", "s-c"],
+      "description": "Sets the given voice channel as the designated \"Hell\" channel.",
       "extraInfo": "This command MUST be used in a guild's text channel. Usage: \"set-channel <channel-name>\", where <channel-name> is the name of the voice channel to designate as the \"Hell\" channel.",
       "visible": true
     },
     {
       "commandID": ".bmanage.set_bot_channel",
-      "names": ["set-bot-channel", "setbc", "sbc"],
+      "names": ["set-bot-channel", "set-bc", "s-bc"],
       "description": "Sets the message channel to send all bot message and bot commands to.",
       "extraInfo": "This command MUST be used in a guild's text channel. Usage: \"set-bot-channel <channel-name>\", where <channel-name> is the name of the message channel to to send bot related message to.",
       "visible": true
     },
     {
       "commandID": ".bmanage.add_prefix",
-      "names": ["add-bot-command-prefix", "add-prefix", "addp"],
+      "names": ["add-bot-command-prefix", "add-prefix", "add-p", "a-p"],
       "description": "Adds a prefix to the list that singles a bot command. If a message with this prefix is received, it will be moved to the bot channel if set.",
       "extraInfo": "This command MUST be used in a guild's text channel. Usage: \"add-bot-command-prefix <prefix>\", where <prefix> is the command prefix for a bot.",
       "visible": true
