--- a/config/responses.properties
+++ b/config/responses.properties
@@ -23,3 +23,6 @@ audio.song_not_found=That audio resource cannot be found.
 
 settings.saved=Settings saved.
 settings.not_saved=Failed to save settings.
+
+msg.user_quote_footer=Bot command from {@user}. Moved here by Teeto.
+msg.bot_quote_footer=Message from bot: {@bot}. Moved here by Teeto.
