--- a/config/responses.properties
+++ b/config/responses.properties
@@ -10,6 +10,7 @@ cmd.not_in_guild=This command can only be used in a guild.
 system.shutdown=Shutting down...
 system.reboot=Rebooting...
 system.cant_reboot=Could not reboot.
+system.updated=Updated
 
 audio.not_connected=Teeto is not in a voice channel.
 audio.left=Teeto has left {@channel}.
