--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@
  *  along with TeetoBot4J.  If not, see <https://www.gnu.org/licenses/>.
  */
 group 'teetobot'
-version '2.2-PR'
+version '2.2'
 
 apply plugin: 'java'
 apply plugin: 'application'
