--- a/config/bot.config.json
+++ b/config/bot.config.json
@@ -1,6 +1,6 @@
 {
   "name": "Teeto",
-  "version": "2.2-PR",
+  "version": "2.2",
   "commandPrefixes": ["teeto plz", "teeto please", "-"],
   "helpCommand": "-help"
 }
