--- a/config/responses.properties
+++ b/config/responses.properties
@@ -21,6 +21,9 @@ audio.user_not_in_voice=Teeto cannot drag you to {@channel} if you are not in a 
 audio.enjoy=Enjoy :smiley:
 audio.channel_not_found=The channel `{@channel}` does not exist.
 audio.song_not_found=That audio resource cannot be found.
+audio.taken=User has been taken to hell...
+audio.user_not_found=That user cannot be found.
+audio.cant_take=Cannot take a user to hell if they are not in a voice channel.
 
 settings.saved=Settings saved.
 settings.not_saved=Failed to save settings.
