Added new audio file and some memory management. First attempt at fixing weird memory issue.

--- a/config/audio.config.json
+++ b/config/audio.config.json
@@ -35,6 +35,12 @@
       "names": ["des", "despacito"],
       "displayName": "Despacito Featuring Just Bieber",
       "fileName": "despacito.aud"
+    },
+    {
+      "id": ".paper",
+      "names": ["paper", "threw"],
+      "displayName": "Your mom's a hoe",
+      "fileName": "paper.aud"
     }
   ]
 }
