Increased java heap memory size options. Increased both xms and xmx in an attempt to fix a memory issue.

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ sourceCompatibility = 1.8
 
 mainClassName="net.lmelaia.teeto.Main"
 
+applicationDefaultJvmArgs = ["-Xms250m", "-Xmx650m"]
+
 repositories {
     mavenCentral()
     jcenter()
